2006-01-20  Sven Panne  <sven.panne@aedion.de>

	* tests/altest/altest.c(FA_EnumerationValue): Distinguish between ALC
	enums and AL enums.

	* tests/altest/altest.c(I_SetSourceOffsetTest): Fixed ambiguity.

	* Initial version. Very incomplete, just to get "contrib" started.